WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
290277
Address more NoUnretainedMemberChecker warnings in WebCore/
https://bugs.webkit.org/show_bug.cgi?id=290277
Summary
Address more NoUnretainedMemberChecker warnings in WebCore/
Chris Dumez
Reported
2025-03-22 19:09:15 PDT
Address more NoUnretainedMemberChecker warnings in WebCore/.
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2025-03-22 19:12:01 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/42897
EWS
Comment 2
2025-03-23 10:03:50 PDT
Committed
292560@main
(dbbcfa7f0320): <
https://commits.webkit.org/292560@main
> Reviewed commits have been landed. Closing PR #42897 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2025-03-23 10:04:18 PDT
<
rdar://problem/147695650
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug