Address more NoUnretainedMemberChecker warnings in WebCore/ https://bugs.webkit.org/show_bug.cgi?id=290277

Reviewed by Geoffrey Garen.

* Source/WebCore/SaferCPPExpectations/NoUnretainedMemberCheckerExpectations:
* Source/WebCore/page/cocoa/ResourceUsageOverlayCocoa.mm:
(WebCore::drawMemHistory):
* Source/WebCore/page/mac/TextIndicatorWindow.h:
* Source/WebCore/platform/ValidationBubble.h:
* Source/WebCore/platform/graphics/FontPlatformData.h:
(WebCore::ScopedTextMatrix::ScopedTextMatrix):
(WebCore::ScopedTextMatrix::~ScopedTextMatrix):
* Source/WebCore/platform/graphics/cg/CGContextStateSaver.h:
(WebCore::CGContextStateSaver::CGContextStateSaver):
(WebCore::CGContextStateSaver::~CGContextStateSaver):
(WebCore::CGContextStateSaver::save):
(WebCore::CGContextStateSaver::restore):
* Source/WebCore/platform/graphics/coretext/ComplexTextControllerCoreText.mm:
(WebCore::provideStringAndAttributes):
* Source/WebCore/platform/ios/ValidationBubbleIOS.mm:
(WebCore::ValidationBubble::setAnchorRect):
* Source/WebCore/platform/mac/ValidationBubbleMac.mm:
(WebCore::ValidationBubble::showRelativeTo):
* Source/WebCore/platform/network/ResourceHandleInternal.h:
* Source/WebCore/platform/network/mac/ResourceHandleMac.mm:
(WebCore::ResourceHandle::cancel):
(WebCore::ResourceHandle::didReceiveAuthenticationChallenge):
(WebCore::ResourceHandle::receivedCredential):
(WebCore::ResourceHandle::receivedRequestToContinueWithoutCredential):
(WebCore::ResourceHandle::receivedRequestToPerformDefaultHandling):
(WebCore::ResourceHandle::receivedChallengeRejection):

Canonical link: https://commits.webkit.org/292560@main