Source/WebCore/page/mac/TextIndicatorWindow.h
@@ -32,6 +32,7 @@
 #import <wtf/RetainPtr.h>
 #import <wtf/RunLoop.h>
 #import <wtf/TZoneMalloc.h>
+#import <wtf/WeakObjCPtr.h>
 
 OBJC_CLASS NSView;
 OBJC_CLASS WebTextIndicatorLayer;
@@ -58,7 +59,7 @@ private:
 
     void startFadeOut();
 
-    NSView *m_targetView;
+    WeakObjCPtr<NSView> m_targetView;
     RefPtr<TextIndicator> m_textIndicator;
     RetainPtr<NSWindow> m_textIndicatorWindow;
     RetainPtr<NSView> m_textIndicatorView;
